# low-latency-matching-engine

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt  engine_benchmark  implementation_plan.md
.github/workflows/: ci.yml
data/: sample.csv
public_docs/: architecture.md  benchmarking.md  design_decisions.md  matching_engine.md  optimization_history.md
src/benchmark/: WorkloadGenerator.h  main.cpp
src/engine/: MatchingEngine.cpp  MatchingEngine.h  Order.h  OrderBook.h  PriceLevel.h  Trade.h  Types.h
src/replay/: CSVParser.h
src/utils/: Timer.h
tests/: engine_test.cpp  main.cpp  replay_test.cpp  test_framework.h
